[gd_scene load_steps=5 format=3 uid="uid://da0dtoj0kt1oe"]

[ext_resource type="Script" uid="uid://bpw1t6s1k2u76" path="res://scripts/restart_menu.gd" id="1_77yv0"]
[ext_resource type="PackedScene" uid="uid://nbspcwp0gb2l" path="res://nodes/menu/menu_button.tscn" id="2_241t5"]
[ext_resource type="PackedScene" uid="uid://bqen74k88vcic" path="res://nodes/menu_cursor.tscn" id="3_r7x2c"]
[ext_resource type="PackedScene" uid="uid://bhyp02lurgb04" path="res://nodes/ui/key_bind_menu.tscn" id="4_241t5"]

[node name="RestartMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_77yv0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -92.0
offset_right = 160.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RestartButton" parent="VBoxContainer" instance=ExtResource("2_241t5")]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
text = "Restart"

[node name="KeyBindButton" parent="VBoxContainer" instance=ExtResource("2_241t5")]
layout_mode = 2
text = "Change Key Bind"

[node name="MainMenuButton" parent="VBoxContainer" instance=ExtResource("2_241t5")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../RestartButton")
text = "Main Menu"

[node name="MenuCursor" parent="." instance=ExtResource("3_r7x2c")]
unique_name_in_owner = true
position = Vector2(778, 530)
scale = Vector2(0.7, 0.7)

[node name="KeyBindMenu" parent="." instance=ExtResource("4_241t5")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/KeyBindButton" to="." method="_on_key_bind_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
